Started migrating roll button borders to outlines to fix issues with 4k displays and 1px image gaps

--- a/src/scss/quadrone/tables.scss
+++ b/src/scss/quadrone/tables.scss
@@ -150,80 +150,6 @@
 
   }
 
-  .tidy-table-row-use-button {
-    --t5e-use-button-border-color: var(--t5e-color-gold);
-    align-items: center;
-    align-self: center;
-    border-radius: 0.125rem;
-    border: 1px solid var(--t5e-use-button-border-color);
-    box-sizing: content-box;
-    cursor: pointer;
-    display: grid;
-    grid-template-columns: 1fr;
-    height: calc(var(--t5e-icon-size-7x) - var(--t5e-size-halfx));
-    width: calc(var(--t5e-icon-size-7x) - var(--t5e-size-halfx));
-    justify-content: center;
-    margin: 0.0625rem 0 0.0625rem 0.0625rem;
-    overflow: hidden;
-    position: relative;
-    transition: all var(--t5e-transition-default);
-
-    img {
-      border: 0;
-    }
-
-    i {
-      grid-column: 1;
-      font-size: 1.125rem;
-      position: absolute;
-      top: 0;
-      right: 0;
-      bottom: 0.0625rem;
-      left: 0;
-      display: flex;
-      /* Fix for font awesome ::before icon alignment */
-      align-items: center;
-      justify-content: center;
-      color: var(--t5e-color-text-gold-emphasis);
-      opacity: 0;
-      transition: all var(--t5e-transition-default);
-    }
-
-    .roll-prompt i {
-      bottom: 0;
-    }
-
-    // TODO: hightouch, please review this. kgar put this here to support svg images
-    dnd5e-icon {
-      --icon-size: calc(1.75rem - 0.125rem);
-      --icon-fill: var(--t5e-color-text-lighter);
-    }
-
-    img {
-      border-radius: 0.0625rem;
-      grid-column: 1;
-      transition: all var(--t5e-transition-default);
-    }
-
-    &:hover {
-      img {
-        opacity: 0;
-      }
-
-      // TODO: hightouch, this was one of the few ways to make an SVG icon go hidden. It doesn't animate, well (or possibly at all).
-      dnd5e-icon {
-        --icon-fill: transparent;
-      }
-
-      i {
-        display: flex;
-        opacity: 1;
-      }
-
-      background: transparent;
-    }
-  }
-
   .tidy-table-row {
     --t5e-item-row-background: transparent;
 
@@ -245,8 +171,8 @@
 
     .item-image {
       background: var(--t5e-color-text-gold-emphasis);
-      width: calc(var(--t5e-icon-size-7x) - var(--t5e-size-halfx));
-      height: calc(var(--t5e-icon-size-7x) - var(--t5e-size-halfx));
+      width: var(--t5e-icon-size-7x);
+      height: var(--t5e-icon-size-7x);
     }
 
     >* {
@@ -259,7 +185,7 @@
       background: transparent;
 
       .tidy-table-row-use-button {
-        border: 1px solid var(--t5e-color-palette-grey-40);
+        outline-color: var(--t5e-color-palette-grey-40);
       }
 
       .item-image {
@@ -300,8 +226,7 @@
 
       .tidy-table-row-use-button {
         --t5e-use-button-border-color: var(--t5e-item-color);
-        outline: 1px solid var(--t5e-use-button-border-color);
-        border: 1px solid var(--t5e-use-button-border-color);
+        outline: 2px solid var(--t5e-use-button-border-color);
 
         i {
           color: oklch(from var(--t5e-item-color) calc(l * 0.85) calc(c * 1.2) h);
@@ -766,7 +691,7 @@
     &.mode-always {
 
       .tidy-table-row-use-button {
-        outline: 1px solid var(--t5e-use-button-border-color);
+        outline: 2px solid var(--t5e-use-button-border-color);
       }
 
       .highlight {
